crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-nested-method-calls-lower-property-load-into-temporary/error.txt
Found 1 error:

Invariant: [Codegen] Internal error: MethodCall::property must be an unpromoted + unmemoized MemberExpression

error.todo-nested-method-calls-lower-property-load-into-temporary.ts:6:14
  4 | function Component({}) {
  5 |   const items = makeArray(0, 1, 2, null, 4, false, 6);
> 6 |   const max = Math.max(2, items.push(5), ...other);
    |               ^^^^^^^^ Got: 'Identifier'
  7 |   return max;
  8 | }
  9 |
